# lnos

./: .gitignore  CMakeLists.txt  LICENSE  README.md  README_ru.md  fixes.md  setup.sh  summary.md  uninstall.sh
agent/: ip.cpp  ip.h  main.cpp
build_debug/: libnss_lnos.so.2  lnosctl  lnosd
liblnos/include/lnos/: config.h  crypto.h  protocol.h
liblnos/src/: config.cpp  crypto.cpp  nss_lnos.cpp
lnosctl/src/: main.cpp
lnosd/include/: registry.h
lnosd/src/: main.cpp
scripts/: install.sh
server/: main.cpp
tests/: integration.sh  test_lnos.cpp
